--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -82,9 +82,11 @@
                             
                             <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
                               <p class="card-text"><%= review.comment %></p>
+                            <% if(currUser && review.author._id.equals(currUser._id)) { %> 
                             <form method="post" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
                                 <button class="btn btn-sm btn-dark">Delete</button>
                             </form>
+                            <% } %>
                         </div>
                     </div>
                 </div>
